--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,12 +18,12 @@ repos:
   - id: trailing-whitespace
     args: [--markdown-linebreak-ext=md]
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.11.0
+  rev: v2.12.0
   hooks:
   - id: pretty-format-yaml
     args: [--autofix]
 - repo: https://github.com/tox-dev/pyproject-fmt
-  rev: 1.3.0
+  rev: 1.7.0
   hooks:
   - id: pyproject-fmt
 - repo: https://github.com/pre-commit/pygrep-hooks
@@ -31,36 +31,43 @@ repos:
   hooks:
   - id: python-use-type-annotations
 - repo: https://github.com/asottile/pyupgrade
-  rev: v3.15.0
+  rev: v3.15.1
   hooks:
   - id: pyupgrade
     args: [--py37-plus]
-- repo: https://github.com/psf/black
-  rev: 23.10.1
+- repo: https://github.com/psf/black-pre-commit-mirror
+  rev: 24.3.0
   hooks:
   - id: black
 - repo: https://github.com/PyCQA/isort
-  rev: 5.12.0
+  rev: 5.13.2
   hooks:
   - id: isort
 - repo: https://github.com/PyCQA/bandit
-  rev: 1.7.5
+  rev: 1.7.8
   hooks:
   - id: bandit
     args: [-c, pyproject.toml]
     additional_dependencies: ['.[toml]']
 - repo: https://github.com/pycqa/flake8
-  rev: 6.1.0
+  rev: 7.0.0
   hooks:
   - id: flake8
+    additional_dependencies:
+    - flake8-annotations
+    - flake8-bugbear
+    - flake8-eradicate
+    - flake8-mutable
+    - flake8-simplify
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.6.1
+  rev: v1.9.0
   hooks:
   - id: mypy
     args: [--install-types, --non-interactive, --show-error-codes]
     additional_dependencies:
-    - genutility
+    - genutility[callbacks,concurrency]
     - rich
+    - typing-extensions>=3.7.4.3
 - repo: https://github.com/Yelp/detect-secrets
   rev: v1.4.0
   hooks:
