--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,16 @@
 [build-system]
 build-backend = "flit_core.buildapi"
 requires = [
-  "flit_core<4,>=3.2",
+  "flit-core<4,>=3.2",
 ]
 
 [project]
 name = "concurrex"
 readme = "readme.md"
-license = {file = "LICENSE"}
-authors = [{name = "Dobatymo", email = "dobatymo@users.noreply.github.com"}]
+license = { file = "LICENSE" }
+authors = [
+  { name = "Dobatymo", email = "dobatymo@users.noreply.github.com" },
+]
 requires-python = ">=3.8"
 classifiers = [
   "License :: OSI Approved :: MIT License",
@@ -28,25 +30,46 @@ dependencies = [
   "rich",
   "typing-extensions>=4",
 ]
-[project.optional-dependencies]
-fast = [
+optional-dependencies.fast = [
   "atomicarray>=0.0.1",
 ]
-test = [
+optional-dependencies.test = [
   "genutility[test]>=0.0.103",
 ]
-[project.urls]
-Home = "https://github.com/Dobatymo/concurrex"
+urls.Home = "https://github.com/Dobatymo/concurrex"
 
 [tool.black]
 line-length = 120
 
 [tool.ruff]
 line-length = 120
+lint.extend-select = [
+  "B",
+  "I",
+]
+lint.ignore = [
+  "B011",
+  "B904",
+]
 
 [tool.isort]
 profile = "black"
 line_length = 120
 
+[tool.pytest.ini_options]
+log_cli = true
+log_level = "DEBUG"                                                                                               # or log_cli_level
+log_format = "%(asctime)s %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)d %(object)s %(message)s" # or log_cli_format
+log_date_format = "%Y-%m-%d %H:%M:%S"                                                                             # or log_cli_date_format
+
+[tool.mypy]
+ignore_missing_imports = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unreachable = true
+
 [tool.bandit]
-skips = ["B101"]
+skips = [
+  "B101",
+]
