--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.6.0
+  rev: v5.0.0
   hooks:
   - id: check-added-large-files
   - id: check-case-conflict
@@ -13,7 +13,8 @@ repos:
   - id: detect-private-key
   - id: end-of-file-fixer
   - id: mixed-line-ending
-    args: [--fix=no]
+  - id: pretty-format-json
+    args: [--autofix, --no-ensure-ascii]
   - id: requirements-txt-fixer
   - id: trailing-whitespace
     args: [--markdown-linebreak-ext=md]
@@ -34,31 +35,19 @@ repos:
   rev: v3.16.0
   hooks:
   - id: pyupgrade
-    args: [--py37-plus]
-- repo: https://github.com/psf/black-pre-commit-mirror
-  rev: 24.4.2
+    args: [--py38-plus]
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.11.10
   hooks:
-  - id: black
-- repo: https://github.com/PyCQA/isort
-  rev: 5.13.2
-  hooks:
-  - id: isort
+  - id: ruff
+    args: [--fix]
+  - id: ruff-format
 - repo: https://github.com/PyCQA/bandit
   rev: 1.7.9
   hooks:
   - id: bandit
     args: [-c, pyproject.toml]
     additional_dependencies: ['.[toml]']
-- repo: https://github.com/pycqa/flake8
-  rev: 7.1.0
-  hooks:
-  - id: flake8
-    additional_dependencies:
-    - flake8-annotations
-    - flake8-bugbear
-    - flake8-eradicate
-    - flake8-mutable
-    - flake8-simplify
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.10.1
   hooks:
