--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,8 +66,10 @@ log_date_format = "%Y-%m-%d %H:%M:%S"                                           
 ignore_missing_imports = true
 no_implicit_optional = true
 warn_redundant_casts = true
+warn_unused_configs = true
 warn_unused_ignores = true
 warn_unreachable = true
+strict_equality = true
 
 [tool.bandit]
 skips = [
