--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dynamic = [
   "version",
 ]
 dependencies = [
-  "genutility[callbacks,concurrency]>=0.0.103",
+  "genutility[callbacks,concurrency,time]>=0.0.103",
   "rich",
   "typing-extensions>=4",
 ]
