--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-22.04, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
@@ -30,8 +30,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Run tests
       run: |
-        python -m pip install .[test]
-        python -m unittest discover tests
+        python -m pip install uv
+        python -m uv run -m pytest
 
   build-and-deploy:
     needs: test
